--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     ~ limitations under the License.
 -->
 <resources>
-    <string name="app_name">MP Face Landmarker</string>
+    <string name="app_name">ipoint</string>
 
     <string name="media_pipe">MediaPipe</string>
 
